[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "svvamp"
version = "0.13.0"
description = "Simulator of Various Voting Algorithms in Manipulating Populations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "François Durand", email = "fradurand@gmail.com" }]
dependencies = [
  "numpy>=2.2.3,<3",
  "networkx>=3.4.2,<4",
  "pandas>=2.2.3,<3",
  "matplotlib>=3.10.0,<4",
  "tikzplotlib>=0.10.1,<0.11",
]

[project.urls]
Repository = "https://github.com/francois-durand/svvamp"
Documentation = "https://francois-durand.github.io/svvamp"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4,<9",
  "pytest-cov>=4.1.0,<6",
  "mypy>=1.15.0,<2",
  "pre-commit>=3.8.0,<5",
  "bump-my-version>=0.21",
  "build>=1.2",
  "ruff>=0.6,<1",
]
docs = [
  "sphinx>=7.4.7,<9",
  "ipython>=8.32.0,<10",
  "nbsphinx>=0.9.3,<0.10",
  "sphinx-mdinclude>=0.5.3,<0.6",
  "pydata-sphinx-theme>=0.14.3,<0.17",
]

[tool.hatch.build.targets.wheel]
packages = ["svvamp"]

[tool.mypy]
files = ["svvamp"]
disallow_untyped_defs = "False"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
lint.select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
lint.ignore = [
    "E501",
    "E731",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
branch = true
source = ["svvamp"]

[tool.coverage.html]
directory = "cov"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first"

[tool.bumpversion]
current_version = "0.13.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "svvamp/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
